NET-320: implement update group capacity in CP sim.