@@ -22,7 +22,6 @@
 
 package net.solarnetwork.central.oscp.dao.jdbc;
 
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.StreamSupport.stream;
 import static net.solarnetwork.central.common.dao.jdbc.sql.CommonJdbcUtils.executeFilterQuery;
 import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
@@ -94,7 +93,7 @@ public class JdbcCapacityGroupConfigurationDao implements CapacityGroupConfigura
 		SelectCapacityGroupConfiguration sql = new SelectCapacityGroupConfiguration(filter);
 		var results = executeFilterQuery(jdbcOps, filter, sql,
 				CapacityGroupConfigurationRowMapper.INSTANCE);
-		return stream(results.spliterator(), false).collect(toList());
+		return stream(results.spliterator(), false).toList();
 	}
 
 	@Override
